# lazy-rag

./: .gitignore  docker-compose.yml  pyproject.toml
examples/: example.py
src/: example.py
src/brag/: __init__.py  embed.py  logger.py  schemas.py  utils.py  vector_dbs.py
src/brag/dbs/: base.py  const.py  schemas.py
