[project]
# https://docs.astral.sh/uv/concepts/projects/config/
name = "brag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colpali-engine",
    "pdf2image>=1.17.0",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brag"]
[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py312"

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali.git" }

[project.scripts]
# will run the function by just typing `make_me_laugh` in the cli
make_me_laugh = "jokes:make_me_laugh"
